--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -14,6 +14,9 @@
       %ul.nav.navbar-nav.navbar-right
         %li
           = link_to "Stories", stories_path, class: set_active_class(stories_path)
+        %li
+          = link_to "People", people_path, class: set_active_class(people_path)
+
         / %li
         /   %a{href: "#"} People
         %li
