Added more links in about page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -13,3 +13,15 @@
           if they like it and are interested.
 
         %p Do you have an idea ? Come play with us!
+
+        %p
+          See our wiki here:
+          = link_to 'wiki.kek.org.in', 'http://wiki.kek.org.in'
+
+        %p
+          We tweet here:
+          = link_to '@kekorgin', 'https://twitter.com/kekorgin'
+
+        %p
+          Join our mailing list here:
+          = link_to 'Kek-Friends', 'http://mail.kek.org.in/mailman/listinfo.cgi/friends'
