--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,4 +5,4 @@
         %div{class: ('footer-content' unless request.path == '/' )}
           .pull-right
             %p hello@kek.org.in
-          %p (C) 2015 kek.org.in
+          %p="(C) #{Time.now.year} kek.org.in"
