A few changes in page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -5,12 +5,13 @@
         %p.heading About
 
         %p
-          Kovalam Ezhuthu Kalari is inspired from the old "Ezhuthu Kalari"
-          traditions of Kerala. These educational spaces emphasised learning by
-          doing, which is what we primarily love doing. We love to code, make, and
-          play. In general, We do not like sitting in classrooms listening to
-          lectures. If we have an idea, we start working on it, and people join in
-          if they like it and are interested.
+          Kovalam E-Kalari is inspired from the old "Kalari"
+          traditions of Kerala. These educational spaces emphasised
+          learning by doing, which is what we primarily love doing. We
+          love to code, make, and play. In general, We do not like
+          sitting in classrooms listening to lectures. If we have an
+          idea, we start working on it, and people join in if they
+          like it and are interested.
 
         %p Do you have an idea ? Come play with us!
 
