--- a/app/views/contact/index.html.haml
+++ b/app/views/contact/index.html.haml
@@ -18,19 +18,16 @@
         %br
 
         %p
-          To reach KEK by bus from the city, one needs to board a south bound bus with any of the following destination boards:
+          To reach KEK by bus from the city, one needs to board a bus
+          bound for Kovalam Beach. There are Airconditioned buses
+          plying from Terminal 10 opposite the East Fort Bus stand.
 
-        %p
-          \- Peringamala via agricultural/karshika college
-        %p
-          \- Neyyattinkara
-        %p
-          \- Vizhinjam via Venganoor
-
+          From the main Kovalam Beach bus stop, go down to the beach,
+          and walk towards light house beach. Use a small lane
+          immediately after Malabar Cafe, to your left. Follow it,
+          take a left at the next 'T', a right at the next 'T' and
+          finally you will reach a larger street. Ask for "Abhi's
+          Cafe". We are on the first floor.
         %br
         %p
-          Your destination is west poonkulam and a landmark to ask for is the CGO Complex.
 
-        %br
-        %p
-          At west poonkulam, also known as 'padinjarea poonkulam' ask for 'Varyam' house. It is a 100m walk from the bus stop.
