--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -26,8 +26,8 @@
         %h4 How do I join you ?
         %p
           Come around and visit us on Open Days (Thursdays) for chaya or kappee
-          after working hours (4pm). You'll bump into one of the current
-          residents.
+          after working hours (4pm).
+
         %p OR, if you're far away,
         %p
           Email us at
@@ -36,36 +36,16 @@
         %p
           Follow us on twitter at
           = link_to 'twitter.com/kekorgin', 'https://twitter.com/kekorgin'
+
         %h4 What about the copyright to my work ?
         Your work is yours - we don't want to hold on to anything you work
         on. We do however ask that you post weekly on our community blog, so
         that other people can know what you're working on and collaborate with
         you.
 
-        %h4 How long can I stay ?
-        %p
-          Residencies are expected to be on specific projects for a clear period
-          of time. We do not encourage residencies longer than 6months. For longer
-          periods of time, you could become a resident Alumnus, and we'll help you
-          find local accommodation nearby.
-
         %h4 How much does it cost ?
         %p
-          Residencies are funded through a gift economy. Currently
-          Rs. 8000/month is a useful reference figure.  If you can
-          afford more, it will help defray the cost of other residents
-          who can't afford this now. And if you can't afford to pay this
-          much, please email us, we can talk about other ways you can
-          contribute, outside of money - for eg: you could work extra
-          in the vegetable garden, help us build useful things,
-          fix things that are broken, or cook meals etc.
-
-        %p
-          You will have access to a bedroom with a bathroom attached,
-          fast internet, a functional kitchen, and any other common
-          facilities on the property.
-
-        %p Shorter stays are possible, but please get in touch with us first.
+          We are currently funded through a gift economy.
 
         %h4 What kind of food will I get ?
         %p
@@ -76,30 +56,24 @@
           restaurants and bars in vicinity, especially closer to the
           beach.
 
-          If you want to cook your own, the kitchen is available for
-          this.
-
-          We are an alcohol free space (see below).
-
         %h4 What kind of etiquette should I be mindful of ?
         %p
-          Since we're an educational space, and working amongst
-          vulnerable young people and communities, we have to be very
+          Since we're an educational space, and in amongst vulnerable
+          young people and communities, we have to be very
           mindful of our behaviour, both in and out of the space.
 
           In general, the guiding principle is to be excellent towards
           each other. This means, for example, using the designated
           areas for smoking, making sure the space is clean, putting
-          things in order if you find them messy (eg: doing the dishes
-          if you find the sink has some), using civil language, wearing
-          locally acceptable clothing, etc.
+          things in order if you find them messy, using civil language, etc.
 
         %h4 What else can I do in the area ?
         %p
-          We're within 2km of the ocean and beach - which means you can easily
-          find your way to the beach. We work closely with the Kovalam Surf club
-          and the Kovalam Skate club. We also work very closely with a local
-          charity (
-          = link_to 'www.sisp.in', 'http://www.sisp.in'
-          ) in their local social charitable efforts.
+          We're within 500m of the ocean and beach - which means you
+          can easily find your way to the beach. We work closely with
+          the Kovalam Surf club and the Kovalam Skate club. We also
+          work very closely with a local charity
+          ( = link_to 'www.sisp.in', 'http://www.sisp.in'
+          ) in their local social charitable efforts, including socal
+          work, teaching, and arts 'n crafts.
 
