--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,8 +3,8 @@
     .row
       .col-lg-12
         .intro-message
-          %h2 കോവളം എഴുത്തു കളരി
-          %h2 Kovalam Ezhuthu Kalari
+          %h2 കോവളം E-കളരി
+          %h2 Kovalam E-Kalari
           %hr.intro-divider/
           %ul.list-inline
             %li
