New KeK, new FAQ.

--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -25,8 +25,7 @@
 
         %h4 How do I join you ?
         %p
-          Come around and visit us on Open Days (Thursdays) for chaya or kappee
-          after working hours (4pm).
+          Come around and drop by Open Day (Saturday) for chaya or kappee
 
 	%p OR, if you're far away,
         %p
@@ -38,42 +37,40 @@
           = link_to 'twitter.com/kekorgin', 'https://twitter.com/kekorgin'
 
         %h4 What about the copyright to my work ?
-        Your work is yours - we don't want to hold on to anything you work
-        on. We do however ask that you post weekly on our community blog, so
-        that other people can know what you're working on and collaborate with
-        you.
+	%p
+	  Your work is yours - we don't want to hold on to anything you work
+	  on. We do however ask that you post weekly on our community blog, so
+          that other people can know what you're working on and collaborate with
+          you.
 
         %h4 How much does it cost ?
         %p
-          We are currently funded through a gift economy. 
+          It doesn't cost you anything! The space is free to use,
+	  provided you contribute in non-monetary ways.
+	  For eg: if you are a graphic designer, help with the posters
+	  If you're a sysadmin, help make the infrastructure cooler.
+	  If you're a hardware hacker, help with the doorlock.
 
-        %h4 What kind of food will I get ?
-        %p
-          Kerala has a range of tasty and novel cuisine.
-          However, we provide simple vegetarian meals.
-
-          If you want to sample other options, there are a number of
-          restaurants and bars in vicinity, especially closer to the
-          beach.
+        %h4 Where can I stay ?
+        %p You cannot stay at KeK. However, there are numerous homestays
+           nearby that we are happy to help you with stay.
 
         %h4 What kind of etiquette should I be mindful of ?
-        %p
-          Since we're an educational space, and in amongst vulnerable
-          young people and communities, we have to be very
-          mindful of our behaviour, both in and out of the space.
+        %p Since we're an educational space, and in amongst vulnerable
+           young people and communities, we have to be very
+           mindful of our behaviour, both in and out of the space.
 
-          In general, the guiding principle is to be excellent towards
-          each other. This means, for example, using the designated
-          areas for smoking, making sure the space is clean, putting
-          things in order if you find them messy, using civil language, etc.
+           In general, the guiding principle is to be excellent towards
+           each other. This means, for example, using the designated
+           areas for smoking, making sure the space is clean, putting
+           things in order if you find them messy, using civil
+           language, etc.
 
         %h4 What else can I do in the area ?
-        %p
-          We're within 500m of the ocean and beach - which means you
-          can easily find your way to the beach. We work closely with
-          the Kovalam Surf club and the Kovalam Skate club. We also
-          work very closely with a local charity
-          ( = link_to 'www.sisp.in', 'http://www.sisp.in'
-          ) in their local social charitable efforts, including socal
-          work, teaching, and arts 'n crafts.
-
+        %p We're within 500m of the ocean and beach - which means you
+           can easily find your way to the beach. We work closely with
+           the Kovalam Surf club and the Kovalam Skate club. We also
+           work very closely with a local charity
+           ( = link_to 'www.sisp.in', 'http://www.sisp.in'
+           ) in their local social charitable efforts, including socal
+           work, teaching, and arts 'n crafts.
