--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -74,6 +74,6 @@
           can easily find your way to the beach. We work closely with
           the Kovalam Surf club and the Kovalam Skate club. We also
           work very closely with a local charity
-          ( = link_to 'www.sisp.in', 'http://www.sisp.in'
-          ) in their local social charitable efforts, including socal
+          = link_to 'www.sisp.in', 'http://www.sisp.in'
+          in their local social charitable efforts, including socal
           work, teaching, and arts 'n crafts.
