add projects feature
 1. remove tags from serialized string to acts_as_taggable gem
 2. Add tag projects for projects page
 3. Add migration to move old tags to taggable table

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -16,6 +16,8 @@
           = link_to "Stories", stories_path, class: set_active_class(stories_path)
         %li
           = link_to "People", people_path, class: set_active_class(people_path)
+        %li
+          = link_to "Projects", projects_path, class: set_active_class(projects_path)
 
         / %li
         /   %a{href: "#"} People
