--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,7 +4,7 @@
 
 .intro-header {
   height: 500px;
-  background: url(../images/kovalam.jpg) no-repeat center center !important;
+  background: url(../images/work-desk.jpg) no-repeat center center !important;
 }
 
 .intro-message {
