--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -5,7 +5,7 @@
         %p.heading About
 
         %p
-          Kovalam E-Kalari is inspired from the old "Kalari"
+          K e-Kalari is inspired from the old "Kalari"
           traditions of Kerala. These educational spaces emphasised
           learning by doing, which is what we primarily love doing. We
           love to code, make, and play. In general, We do not like
