Update address and maps to Bangalore

--- a/app/views/contact/index.html.haml
+++ b/app/views/contact/index.html.haml
@@ -8,25 +8,27 @@
           Email us at
           = link_to 'hello@kek.org.in', 'mailto:hello@kek.org.in'
 
+	  Join our mailing list here:
+	  = link_to 'Kek-Friends', 'http://mail.kek.org.in/mailman/listinfo.cgi/friends'
+
         %h3 Map
-        %iframe{:frameborder => "0", :height => "350", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://www.openstreetmap.org/export/embed.html?bbox=76.97622835636139%2C8.387606907943873%2C76.98219358921051%2C8.390637215806372&layer=mapnik&marker=8.389122064829566%2C76.97921097278595", :style => "border: 1px solid black", :width => "425"}
+        %iframe{:frameborder => "0", :height => "350", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://www.openstreetmap.org/export/embed.html?bbox=77.6362180709839%2C12.963941937116259%2C77.63825118541719%2C12.965405685099817&amp;layer=mapnik", :style => "border: 1px solid black", :width => "425"}
         %br/
         %small
-          %a{:href => "http://www.openstreetmap.org/?mlat=8.38912&mlon=76.97921#map=18/8.38912/76.97921"} View Larger Map
+          %a{:href => "http://www.openstreetmap.org/#map=19/12.96467/77.63723"} View Larger Map
         %br
         %br
 
         %p
-          To reach KEK by bus from the city, one needs to board a bus
-          bound for Kovalam Beach. There are Airconditioned buses
-          plying from Terminal 10 opposite the East Fort Bus stand.
+	  KeK is now housed by the %a{:href => "https://www.cis-india.org"} Centre for Internet and Society in their basement.
+	  %br
+	     The Address is:
+	     No. 194, 2nd 'C' Cross,
+	     Domlur 2nd Stage,
+	     Bengaluru, 560071
 
-          From the main Kovalam Beach bus stop, go down to the beach,
-          and walk towards light house beach. Use a small lane
-          immediately after Malabar Cafe, to your left. Follow it,
-          take a left at the next 'T', a right at the next 'T' and
-          finally you will reach a larger street. Ask for "Abhi's
-          Cafe". We are on the first floor.
+	  To find us, ask at the reception desk during working hours, or send us an email
+	  = link_to 'hello@kek.org.in', 'mailto:hello@kek.org.in'
         %br
         %p
 
