Fixed a few issues

--- a/app/views/contact/index.html.haml
+++ b/app/views/contact/index.html.haml
@@ -8,27 +8,30 @@
           Email us at
           = link_to 'hello@kek.org.in', 'mailto:hello@kek.org.in'
 
-	  Join our mailing list here:
-	  = link_to 'Kek-Friends', 'http://mail.kek.org.in/mailman/listinfo.cgi/friends'
+          %br
+          %br
 
-        %h3 Map
-        %iframe{:frameborder => "0", :height => "350", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://www.openstreetmap.org/export/embed.html?bbox=77.6362180709839%2C12.963941937116259%2C77.63825118541719%2C12.965405685099817&amp;layer=mapnik", :style => "border: 1px solid black", :width => "425"}
-        %br/
-        %small
-          %a{:href => "http://www.openstreetmap.org/#map=19/12.96467/77.63723"} View Larger Map
-        %br
-        %br
+          Join our mailing list here:
+          = link_to 'Kek-Friends', 'http://mail.kek.org.in/mailman/listinfo.cgi/friends'
 
-        %p
-	  KeK is now housed by the %a{:href => "https://www.cis-india.org"} Centre for Internet and Society in their basement.
-	  %br
-	     The Address is:
-	     No. 194, 2nd 'C' Cross,
-	     Domlur 2nd Stage,
-	     Bengaluru, 560071
+      %h3 Map
+      %iframe{:frameborder => "0", :height => "350", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "https://www.openstreetmap.org/export/embed.html?bbox=77.6362180709839%2C12.963941937116259%2C77.63825118541719%2C12.965405685099817&amp;layer=mapnik", :style => "border: 1px solid black", :width => "425"}
+      %br/
+      %small
+        %a{:href => "https://www.openstreetmap.org/#map=19/12.96467/77.63723"} View Larger Map
+      %br
+      %br
 
-	  To find us, ask at the reception desk during working hours, or send us an email
-	  = link_to 'hello@kek.org.in', 'mailto:hello@kek.org.in'
-        %br
-        %p
+      %p
+        KeK is now housed by the
+        = link_to 'Centre for Internet and Society', "https://www.cis-india.org"
+        in their basement.
+      %br
+        %p The Address is:
+        %p No. 194, 2nd 'C' Cross,
+        %p Domlur 2nd Stage,
+        %p Bengaluru, 560071
 
+      %p
+        To find us, ask at the reception desk during working hours, or send us an email
+        = link_to 'hello@kek.org.in', 'mailto:hello@kek.org.in'
